# cupey

./: Cargo.toml  README.md
cupey_test_folder/: random_text_1.txt  random_text_2.txt  random_text_3.txt
cupey_test_folder/inner_folder_1/: bar.txt  foo.txt
src/: cupey_traits.rs  errors.rs  lib.rs  main.rs  settings_file.rs
tests/: integration_tests.rs  unit_tests.rs
tests/common/: mod.rs
