[package]
name = "playground"
version = "0.1.0"
authors = ["Agamiru <chidinnaemekannadi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cupey"
path = "src/main.rs"

[lib]
name = "Cupey"
path = "src/lib.rs"

[dependencies]
clap = "2.33.3"
pickledb = "0.4.0"
walkdir = "2.3.2"